# hello

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  aligned_deleter.hpp  alloc.hpp  build_nfd_vc142.cmd  color.hpp  debug_gui.cpp  debug_gui.hpp  example.lua  fps_camera_controller.cpp  fps_camera_controller.hpp  geometry.cpp  geometry.hpp  hello.code-workspace  image_buffer.cpp  image_buffer.hpp  main.cpp  material.hpp  mesh.cpp  mesh.hpp  mouse_camera_controller.cpp  mouse_camera_controller.hpp  package.json  pnpm-lock.yaml  ray_tracer.cpp  ray_tracer.hpp  ray_tracer_camera.cpp  ray_tracer_camera.hpp  texture.hpp  xorshift128plus.cpp  xorshift128plus.hpp
.github/workflows/: build-with-emscripten.yml  build-with-mingw.yml  build-with-msvc.yml
